Add legend to the graph. This legend should be reskin during the view integration.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
     </header>
 
     <h1>Zoomable Treemaps</h1>
-
     <p id="chart"></p>
+
+    <div id="legend"></div>
 
     <fieldset class="radio">
       <ol class="radio">
@@ -71,6 +72,7 @@
 
     <p>This visualization is implemented in <a href="http://d3js.org">D3.js</a>, based on an <a href="http://mbostock.github.com/d3/talk/20111018/treemap.html">earlier version</a> from [Mike Bostock's] talk at SVG Open. Also see Nicolas Garcia Belmonte’s zoomable treemap of <a href="http://thejit.org/static/v20/Jit/Examples/Treemap/example1.html">music albums</a>, and The New York Times’ free-form zooming for <a href="http://www.nytimes.com/packages/html/newsgraphics/2011/0119-budget/">Obama’s 2012 budget proposal</a>. Note the subtle differences in behavior!</p>
 
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js"></script>
     <script src="utils.js"></script>
     <script src="flare.js"></script>
